# cynn

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: build-wheels.yml  build-wheels2.yml  test-wheels.yml
docs/: IMPLEMENTATION_SUMMARY.md  onnx-format.md
scripts/: download_datasets.py
src/: CMakeLists.txt
src/cynn/: CMakeLists.txt  __init__.py  _common.pxi  _core.pyi  _core.pyx  cnn.pxd  cnn.pyx  dfann.pxd  fann.pyx  ffann.pxd  genann.pxd  genann.pyx  kann.pxd  kann.pyx  nnet.pxd  tinn.pxd  tinn.pyx
tests/: conftest.py  test_basic.py  test_batch_training.py  test_cnn_basic.py  test_context_managers.py  test_fann_basic.py  test_fann_buffer_protocol.py  test_fann_double_basic.py  test_fann_persistence.py  test_fann_threading.py  test_fann_training.py  test_genann_basic.py  test_genann_buffer_protocol.py  test_genann_persistence.py  test_genann_threading.py  test_genann_training.py  test_kann_basic.py  test_kann_helpers.py  test_kann_training.py  test_persistence.py  test_tinn_basic.py  test_tinn_buffer_protocol.py  test_tinn_persistence.py  test_tinn_threading.py  test_tinn_training.py
tests/data/: README.md  iris.csv  mnist_subset.csv  sequences.csv  shakespeare_tiny.txt  sine_wave.csv
tests/examples/: README.md  cnn_mnist.py  fann_regression.py  genann_iris.py  kann_gru_text.py  kann_lstm_sequence.py  kann_mlp_iris.py  kann_rnn_timeseries.py  kann_text_generation.py  run_all_examples.py  tinn_xor.py  xor_problem.py
