[project]
name = "cynn"
version = "0.1.0"
description = "cython neural net wrappers"
readme = "README.md"
authors = [
    { name = "shakfu", email = "me@example.com" }
]
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
[project.scripts]
demo = "cynn:main"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[build-system]
requires = ["scikit-build-core>=0.10", "cython"]
build-backend = "scikit_build_core.build"

