[project]
name = "cynn"
version = "0.1.2"
description = "Python bindings to four lightweight neural network libraries."
readme = "README.md"
authors = [
    { name = "shakfu", email = "me@example.com" }
]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "numpy>=1.26.0",
]

# [project.scripts]
# demo = "cynn:main"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"
# Files to include in the SDist even if they are skipped by default. Supports gitignore syntax.
# sdist.include = []
# Files to exclude from the SDist even if they are included by default. Supports gitignore syntax.
# sdist.exclude = []
# A set of patterns to exclude from the wheel.
wheel.exclude = ["*.pxd", "*.pyx"]
# Whether to strip the binaries.
# install.strip = true
# The CMake build directory. Defaults to a unique temporary directory.
# build-dir = ""

[build-system]
requires = ["scikit-build-core>=0.10", "cython"]
build-backend = "scikit_build_core.build"

