[project]
name = "cynn"
version = "0.1.5"
description = "Python bindings to five lightweight C neural network libraries (Tinn, GENANN, FANN, nn1, KANN)."
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    { name = "Shakeeb Alireza", email = "me@example.com" }
]
maintainers = [
    { name = "Shakeeb Alireza", email = "me@example.com" }
]
requires-python = ">=3.10"
keywords = [
    "neural-network",
    "machine-learning",
    "deep-learning",
    "cython",
    "mlp",
    "lstm",
    "gru",
    "rnn",
    "cnn",
    "backpropagation",
    "artificial-intelligence",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/shakfu/cynn"
Repository = "https://github.com/shakfu/cynn"
Issues = "https://github.com/shakfu/cynn/issues"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "numpy>=1.26.0",
    "twine>=6.2.0",
]

# [project.scripts]
# demo = "cynn:main"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
# A set of patterns to exclude from the wheel.
wheel.exclude = ["*.pxd", "*.pyx", "*.pxi"]
# Whether to strip the binaries.
# install.strip = true
# The CMake build directory. Defaults to a unique temporary directory.
# build-dir = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["scikit-build-core>=0.10", "cython"]
build-backend = "scikit_build_core.build"

